fixing spacing between profile and buzz container

--- a/src/main/webapp/Styles/profile.css
+++ b/src/main/webapp/Styles/profile.css
@@ -13,7 +13,6 @@
     column-gap: 1cm;
     justify-content: center;
     align-items: center;
-    margin-bottom: 20px;
 }
 
 .profile-container h1{
@@ -34,6 +33,7 @@
 
 .buzz-container {
     width: fit-content;
+    margin-top: 20px;
 }
 
 #divider {
